--- a/index.html
+++ b/index.html
@@ -2,82 +2,77 @@
 <html>
 
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hello Bulma!</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hello Bulma!</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
-<section class="hero is-info is-medium">
-<!-- Hero head: will stick at the top -->
-<div class="hero-head">
-<nav class="navbar">
-<div class="container">
-<div class="navbar-brand">
-<a class="navbar-item">
-<img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
-</a>
-<span class="navbar-burger burger" data-target="navbarMenuHeroA">
-<span></span>
-<span></span>
-<span></span>
-</span>
-</div>
-<div id="navbarMenuHeroA" class="navbar-menu">
-<div class="navbar-end">
-<a class="navbar-item is-active">
-Home
-</a>
-<a class="navbar-item">
-Examples
-</a>
-<a class="navbar-item">
-Documentation
-</a>
-<span class="navbar-item">
-<a class="button is-info is-inverted">
-<span class="icon">
-<i class="fab fa-github"></i>
-</span>
-<span>Download</span>
-</a>
-</span>
-</div>
-</div>
-</div>
-</nav>
-</div>
 
-<!-- Hero content: will be in the middle -->
-<div class="hero-body">
-<div class="container has-text-centered">
-<h1 class="title">
-迫真の氷結晶
-</h1>
-<h2 class="subtitle">
-口マンありますねぇ！
-</h2>
-</div>
-</div>
+  <section class="hero is-info is-medium">
+    <!-- Hero head: will stick at the top -->
+    <div class="hero-head">
+      <nav class="navbar">
+        <div class="container">
+          <div class="navbar-brand">
+            <a class="navbar-item">
+              <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo" />
+            </a>
+            <span class="navbar-burger burger" data-target="navbarMenuHeroA">
+              <span></span>
+              <span></span>
+              <span></span>
+            </span>
+          </div>
+          <div id="navbarMenuHeroA" class="navbar-menu">
+            <div class="navbar-end">
+              <a class="navbar-item is-active">Home</a>
+              <a class="navbar-item">Examples</a>
+              <a class="navbar-item">Documentation</a>
+              <span class="navbar-item">
+                <a class="button is-info is-inverted">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>Download</span>
+                </a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
 
-<!-- Hero footer: will stick at the bottom -->
-<div class="hero-foot">
-<nav class="tabs">
-<div class="container">
-<ul>
-<li class="is-active"><a>Blog</a></li>
-<li><a>Portfolio</a></li>
-</ul>
-</div>
-</nav>
-</div>
-</section>
+    <!-- Hero content: will be in the middle -->
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title">
+          迫真の氷結晶
+        </h1>
+        <h2 class="subtitle">
+          口マンありますねぇ！
+        </h2>
+      </div>
+    </div>
 
-<!--
+    <!-- Hero footer: will stick at the bottom -->
+    <div class="hero-foot">
+      <nav class="tabs">
+        <div class="container">
+          <ul>
+            <li class="is-active"><a>Blog</a></li>
+            <li><a>Portfolio</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </section>
+
+  <!--
 <section class="section">
 <div class="container">
 <h1 class="title">
@@ -93,45 +88,45 @@ My first website with <strong>Bulma</strong>!
 </section>
 -->
 
-<section class="section" id="ice_articles">
-<div class="columns" v-for="post in posts">
-<div class="column content is-three-fifths is-offset-one-fifth">
-<a href="">
-<h1>
-{{ post.title }}
-</h1>
-</a>
-<p>
-{{ post.content }}
-</p>
-</div>
-</div>
-</section>
+  <section class="section" id="ice_articles">
+    <div class="columns" v-for="post in posts">
+      <div class="column content is-three-fifths is-offset-one-fifth">
+        <a href="">
+          <h1>
+            {{ post.title }}
+          </h1>
+        </a>
+        <p>
+          {{ post.content }}
+        </p>
+      </div>
+    </div>
+  </section>
 
-<script>
-var app = new Vue({
-el: '#ice_articles',
-data: {
-posts: []
-},
-methods: {
-add: function (post) {
-this.posts.push(post);
-}
-}
-})
-
-axios.get('http://turkey.slis.tsukuba.ac.jp/~s1711430/ice_post.php')
-.then(function (response) {
-    console.log(response);
-    response.data.forEach(function(post) {
-        app.add(post);
-        });
+  <script>
+    var app = new Vue({
+      el: '#ice_articles',
+      data: {
+        posts: []
+      },
+      methods: {
+        add: function (post) {
+          this.posts.push(post);
+        }
+      }
     })
-.catch(function (error) {
-    console.log(error);
-    });
-</script>
+
+    axios.get('http://turkey.slis.tsukuba.ac.jp/~s1711430/ice_post.php')
+      .then(function (response) {
+        console.log(response);
+        response.data.forEach(function (post) {
+          app.add(post);
+        });
+      })
+      .catch(function (error) {
+        console.log(error);
+      });
+  </script>
 </body>
 
 </html>
