--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
 
   <section class="hero is-info is-medium">
-    <!-- Hero head: will stick at the top -->
     <div class="hero-head">
       <nav class="navbar">
         <div class="container">
@@ -47,7 +46,6 @@
       </nav>
     </div>
 
-    <!-- Hero content: will be in the middle -->
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">
@@ -59,7 +57,6 @@
       </div>
     </div>
 
-    <!-- Hero footer: will stick at the bottom -->
     <div class="hero-foot">
       <nav class="tabs">
         <div class="container">
@@ -71,22 +68,6 @@
       </nav>
     </div>
   </section>
-
-  <!--
-<section class="section">
-<div class="container">
-<h1 class="title">
-Hello World
-</h1>
-<p class="subtitle">
-My first website with <strong>Bulma</strong>!
-</p>
-<div id="app">
-{{ message }}
-</div>
-</div>
-</section>
--->
 
   <section class="section" id="ice_articles">
     <div class="columns" v-for="post in posts">
@@ -119,9 +100,7 @@ My first website with <strong>Bulma</strong>!
     axios.get('http://turkey.slis.tsukuba.ac.jp/~s1711430/ice_post.php')
       .then(function (response) {
         console.log(response);
-        response.data.forEach(function (post) {
-          app.add(post);
-        });
+        response.data.forEach(app.add);
       })
       .catch(function (error) {
         console.log(error);
