--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <section class="hero is-info is-medium">
     <div class="hero-head">
+
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
@@ -27,22 +28,35 @@
               <span></span>
             </span>
           </div>
+
           <div id="navbarMenuHeroA" class="navbar-menu">
+
+            <div class="navbar-start">
+              <div class="navbar-item">
+                <div class="control has-icons-left">
+                  <input class="input" type="email" placeholder="Email">
+                  <span class="icon is-left">
+                      <i class="fas fa-search"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+
             <div class="navbar-end">
-              <a class="navbar-item is-active">Home</a>
-              <a class="navbar-item">Examples</a>
-              <a class="navbar-item">Documentation</a>
+              <a class="navbar-item">ログイン</a>
               <span class="navbar-item">
                 <a class="button is-info is-inverted">
                   <span class="icon">
-                    <i class="fab fa-github"></i>
+                    <i class="fas fa-edit"></i>
                   </span>
-                  <span>Download</span>
+                  <span>記事を書く</span>
                 </a>
               </span>
             </div>
+
           </div>
         </div>
+
       </nav>
     </div>
 
@@ -52,7 +66,7 @@
           迫真の氷結晶
         </h1>
         <h2 class="subtitle">
-          口マンありますねぇ！
+          ブログシステムすげえめんどくせえ(本音)
         </h2>
       </div>
     </div>
