--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Bulma!</title>
+  <title>トップページくん - Icicle Blog System</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+  <link rel="stylesheet" href="inject.css" >
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -14,13 +15,14 @@
 <body>
 
   <section class="hero is-info is-medium">
+
     <div class="hero-head">
 
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a class="navbar-item">
-              <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo" />
+            <a class="navbar-item" href="./">
+              <img src="yjsnpi.png" alt="Logo" />
             </a>
             <span class="navbar-burger" data-target="navbarMenuHeroA">
               <span></span>
@@ -49,7 +51,9 @@
 
             <div class="navbar-item is-expanded">
               <div class="control is-expanded has-icons-left" style="flex-grow: 1;">
-                <input name="search" type="search" class="input" placeholder="検索">
+                <form method="GET" action="search.php">
+                  <input name="keyword" type="search" class="input" placeholder="検索">
+                </form>
                 <span class="icon is-left">
                     <i class="fas fa-search"></i>
                 </span>
@@ -57,6 +61,7 @@
             </div>
 
             <div class="navbar-end">
+              <a class="navbar-item" href="./ice_author_profile.php">ログイン</a>
               <a class="navbar-item" href="./ice_create_author.php">新規登録</a>
               <span class="navbar-item">
                 <a class="button is-info is-inverted" href="./edit.php">
@@ -74,14 +79,20 @@
       </nav>
     </div>
 
+    
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">
-          迫真の氷結晶
+          Icicle Blog System
         </h1>
         <h2 class="subtitle">
-          ブログシステムすげえめんどくせえ(本音)
+          <p><s>ブログシステムすげえめんどくせえ(本音)</s></p>
         </h2>
+        <p>
+          <a class="button is-rounded is-warning" href="./s1711430-f-Ino-Yuto.ppt">
+            <span>PowerPointこ↑こ↓です</span>
+          </a>
+        </p>
       </div>
     </div>
 
@@ -102,19 +113,37 @@
   <section class="section" id="ice_articles">
     <div class="columns" v-for="post in posts">
       <div class="column content is-three-fifths is-offset-one-fifth">
-        <a v-bind:href="post.uri">
+        <article class="column">
           <h1>
-            {{ post.title }}
+            <a class="title" v-bind:href="post.uri">
+              {{ post.title }}
+            </a>
+            <a v-bind:href="post.author_uri">
+              <span class="subtitle is-6">
+                by {{ post.author_name }}
+              </span>
+            </a>
           </h1>
-        </a>
-        <p>
-          {{ post.content_text }}
-        </p>
+          <p class="content-text">
+            {{ post.content_text | letter400 }}
+          </p>
+          <div class="tags">
+            <a v-for="tag in post.tags" class="tag is-info" v-bind:href="tag.uri">
+              {{ tag.tag_name }}
+            </a>
+          </div>
+        </article>
       </div>
     </div>
   </section>
 
   <script>
+    Vue.filter('letter400', function (value) {
+        if (!value) return ''
+        value = value.toString();
+        return value.slice(0, 400);
+    });
+
     var app = new Vue({
       el: '#ice_articles',
       data: {
@@ -125,7 +154,7 @@
           this.posts.push(post);
         }
       }
-    })
+    });
 
     axios.get('http://turkey.slis.tsukuba.ac.jp/~s1711430/ice_post.php')
       .then(function (response) {
