--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
           Icicle Blog System
         </h1>
         <h2 class="subtitle">
-          <p><s>ブログシステムすげえめんどくせえ(本音)</s></p>
+          <!--<p><s>ブログシステム死ぬほどめんどくさかったのでもう二度とやりたくない(本音)</s></p>-->
           <p>201711430 猪野 湧斗</p>
+          <p>詳細な説明 →<a href="http://turkey.slis.tsukuba.ac.jp/~s1711430/post.php?post_id=20" style="border-bottom:1px solid;">このシステムについて</a></p>
         </h2>
         <p>
           <a class="button is-rounded is-warning" href="./s1711430-f-Ino-Yuto.ppt">
@@ -97,18 +98,6 @@
       </div>
     </div>
 
-    <!--
-    <div class="hero-foot">
-      <nav class="tabs">
-        <div class="container">
-          <ul>
-            <li class="is-active"><a>Blog</a></li>
-            <li><a>Portfolio</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-    -->
   </section>
 
   <section class="section" id="ice_articles">
@@ -125,9 +114,7 @@
               </span>
             </a>
           </h1>
-          <p class="content-text">
-            {{ post.content_text | letter400 }}
-          </p>
+          <p class="content-text">{{ post.content_text | letter400 }}</p>
           <div class="tags">
             <a v-for="tag in post.tags" class="tag is-info" v-bind:href="tag.uri">
               {{ tag.tag_name }}
